# nix-paths

./: .gitignore  .travis.yml  Setup.lhs  nix-paths.cabal
src/Nix/: FindFile.hs  Paths.hs
