name:          nix-paths
version:       1.0.1
synopsis:      Knowledge of Nix's installation directories.
description:   This module provides full paths to various Nix utilities, like @nix-store@,
               @nix-instantiate@, and @nix-env@.
license:       BSD3
license-file:  LICENSE
author:        Peter Simons
maintainer:    simons@cryp.to
tested-with:   GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2,
               GHC == 8.2.2, GHC == 8.4.3
category:      Distribution, Nix
homepage:      https://github.com/peti/nix-paths
bug-reports:   https://github.com/peti/nix-paths/issues
build-type:    Custom
cabal-version: >= 1.10

custom-setup
  setup-depends: base, Cabal

source-repository head
  type:     git
  location: https://github.com/peti/nix-paths

flag allow-relative-paths
  default:     False
  manual:      True
  description: If any of the required Nix tools are missing at build-time, compile a
               run-time $PATH dependent variant of this library instead of failing. This
               is useful for test environment such as Travis-CI, which may not have Nix
               installed.

library
  exposed-modules:  Nix.FindFile
                    Nix.Paths
  hs-source-dirs:   src
  build-depends:    base < 5, process
  default-language: Haskell2010

  if !flag(allow-relative-paths)
    build-tools: nix-build, nix-env, nix-hash, nix-instantiate, nix-store
